# semihosting-xpack

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README-MAINTAINER.md  README.md  meson.build  package-lock.json  package.json  xpack.json
include/micro-os-plus/: semihosting-inlines.h  semihosting.h
meta/: CMakeLists.txt  micro-os-plus-semihosting-config-version.cmake  micro-os-plus-semihosting-config.cmake  xpack-helper.cmake
sources/: CMakeLists.txt
sources/include/micro-os-plus/: semihosting-inlines.h
sources/src/: syscalls-semihosting.cpp
src/: posix-functions.h  semihosting-startup.cpp  semihosting-syscalls.cpp  semihosting-trace.cpp  syscalls-semihosting.cpp  trace-semihosting.cpp
